--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,13 @@
 # main links links
 main:
+  - title: "CV"
+    url: /cv/  
+    
   - title: "Research"
     url: /research/  
 
+- title: "Presentations"
+    url: /presentations/   
+    
   - title: "Teaching"
     url: /teaching/    
