--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Berkeley, California"
   employer         : 
   uri              : # URL
-  email            : "carlos.paramo@berkeley.edu" 
+  email            : "carlos.paramo@stanford.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
