--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Carlos Paramo"
 title_separator          : "-"
 name                     : &name "Carlos Paramo"
-description              : &description "Economics PhD Candidate, University of California Berkeley"
+description              : &description "Postdoctoral Fellow at the Stanford King Center"
 url                      : https://paramobrotz.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "paramobrotz/paramobrotz.github.io"
