--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.jpg"
   name             : "Carlos Paramo"
   pronouns         : # example: "she/her"  
-  bio              : "Economics PhD Candidate at the University of California, Berkeley"
+  bio              : "Postdoctoral Fellow at the Stanford King Center"
   location         : "Berkeley, California"
   employer         : 
   uri              : # URL
